--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -17,12 +17,7 @@
 
         <tr th:each="dto:${result.dtoList}">
             <th scope="row">
-<!--                <a th:href="@{/board/read(bno = ${dto.bno},-->
-<!--                page= ${result.page},-->
-<!--                type=${pageRequestDTO.type} ,-->
-<!--                keyword = ${pageRequestDTO.keyword})}">-->
-                    [[${dto.bno}]]
-<!--                </a>-->
+                <a th:href="@{read(bno=${dto.bno})}"> [[${dto.bno}]] </a>
             </th>
             <td>[[${dto.title}]] ---------------- [<b th:text="${dto.replyCount}"></b>]</td>
             <td>[[${dto.writerName}]] <small>[[${dto.writerEmail}]]</small></td>
