--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -17,7 +17,7 @@
 
         <tr th:each="dto:${result.dtoList}">
             <th scope="row">
-                <a th:href="@{read(bno=${dto.bno})}"> [[${dto.bno}]] </a>
+                <a th:href="@{read(bno=${dto.bno},page=${result.page})}"> [[${dto.bno}]] </a>
             </th>
             <td>[[${dto.title}]] ---------------- [<b th:text="${dto.replyCount}"></b>]</td>
             <td>[[${dto.writerName}]] <small>[[${dto.writerEmail}]]</small></td>
@@ -26,6 +26,21 @@
 
         </tbody>
     </table>
+
+    <!--페이저-->
+    <ul class="pagination h-100 justify-content-center align-items-center">
+        <li class="page-item" th:if="${result.prev}">
+            <a class="page-link" th:href="@{/board/list(page = ${result.start - 1})}" tabindex="-1">Previous</a>
+        </li>
+        <li th:class="'page-item' +' '+ ${result.page == page ? 'active':''}" th:each="page : ${result.pageList}">
+            <a class="page-link" th:href="@{/board/list(page = ${page})}">
+                [[${page}]]
+            </a>
+        </li>
+        <li class="page-item" th:if="${result.next}">
+            <a class="page-link" th:href="@{/board/list(page = ${result.end + 1})}">Next</a>
+        </li>
+    </ul>
 </th:block>
 
 </html>
