--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -40,5 +40,55 @@
         <a th:href="@{/board/list(page =${requestDTO.page})}">
             <button type="button" class="btn btn-info">List</button>
         </a>
+
+        <!--댓글 카운트 표시-->
+        <div>
+            <div class="mt-4">
+                <h5><span class="badge-secondary replyCount">ReplyCount [[${dto.replyCount}]]</span></h5>
+            </div>
+            <div class="list-group replyList">
+
+            </div>
+        </div>
+        <script th:inline="javaScript">
+            const replyCount = document.querySelector(".replyCount");
+            document.addEventListener("DOMContentLoaded", function () {
+                let bno = [[${dto.bno}]];
+                let listGroup = document.querySelector(".replyList");
+
+                // 날짜 처리를 위한 함수
+                function formatTime(str) {
+                    let date = new Date(str);
+                    console.log(date)
+                    return date.getFullYear() + '/' + (date.getMonth() + 1) + '/' + date.getDate() + ' ' + date.getHours() + ':' + date.getMinutes();
+                }
+                console.log("ajax 시작 ")
+                function loadJSONDate() {
+                    fetch('/replies/board/' + bno)
+                        .then(response => response.json())
+                        .then(data => {
+                            console.log(data);
+                            let str = '';
+                            replyCount.innerHTML = " Reply Count " + data.length;
+
+                            data.forEach(function (reply, idx) {
+                                console.log(reply);
+                                str += '<div class="card-body" data-rno="' + reply.rno + '"><b>' + reply.rno + '</b>';
+                                str += '<h5 class="card-title">' + reply.text + '</h5>';
+                                str += '<h6 class="card-subtitle mb-2 text-muted">' + reply.replyer + '<h6>';
+                                str += '<p class="card-text">' + formatTime(reply.regDate) + '</p>';
+                                str += '</div>';
+                            });
+                            listGroup.innerHTML += str;  // 이 부분을 수정하여 이전 내용에 추가되도록 변경
+
+                        })
+                        .catch(error => console.error('Error:', error));
+                }
+
+                replyCount.addEventListener("click", function () {
+                    loadJSONDate();
+                });
+            });
+        </script>
     </th:block>
 </th:block>
