--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -69,7 +69,7 @@
                         .then(data => {
                             console.log(data);
                             let str = '';
-                            replyCount.innerHTML = " Reply Count " + data.length;
+                            replyCount.innerHTML = " ReplyCount " + data.length;
 
                             data.forEach(function (reply, idx) {
                                 console.log(reply);
@@ -86,6 +86,7 @@
                 }
 
                 replyCount.addEventListener("click", function () {
+                    listGroup.innerHTML = "";
                     loadJSONDate();
                 });
             });
