--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -40,10 +40,40 @@
         <a th:href="@{/board/list(page =${requestDTO.page})}">
             <button type="button" class="btn btn-info">List</button>
         </a>
+        <!--모달창-->
+        <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="replyText" placeholder="Reply Text....">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" name="replyer" placeholder="Replyer">
+                            <input type="hidden" name="rno">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-danger replyRemove">Remove</button>
+                        <button type="button" class="btn btn-warning replyModify">Modify</button>
+                        <button type="button" class="btn btn-primary replySave">Save</button>
+                        <button type="button" class="btn btn-outline-secondary replyClose" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!--댓글 카운트 표시-->
         <div>
             <div class="mt-4">
+                <!--댓글 추가-->
+                <h5><span class="badge badge-info addReply">AddReply</span></h5>
                 <h5><span class="badge-secondary replyCount">ReplyCount [[${dto.replyCount}]]</span></h5>
             </div>
             <div class="list-group replyList">
@@ -86,10 +116,32 @@
                 }
 
                 replyCount.addEventListener("click", function () {
+                    //리스트 중복을 피하기 위한 초기화
                     listGroup.innerHTML = "";
                     loadJSONDate();
                 });
             });
+
+            const modal = document.querySelector(".modal");
+            const addReply = document.querySelector(".addReply");
+            const closeModalBtn = document.querySelector(".close");
+           // 모달 불러오기
+            addReply.addEventListener("click",function (){
+               modal.style.display = "block";
+            });
+
+            // 모달 x 버튼 클릭 시 닫기
+            closeModalBtn.addEventListener("click",function (){
+                modal.style.display = "none";
+            });
+
+            // 모달 외부 클릭 시 닫기
+            window.addEventListener('click', function(event) {
+                if (event.target === modal) {
+                    modal.style.display = 'none';
+                }
+            });
+
         </script>
     </th:block>
 </th:block>
