--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -82,38 +82,9 @@
         </div>
         <script th:inline="javaScript">
             const replyCount = document.querySelector(".replyCount");
+            const listGroup = document.querySelector(".replyList");
+            let bno = [[${dto.bno}]];
             document.addEventListener("DOMContentLoaded", function () {
-                let bno = [[${dto.bno}]];
-                let listGroup = document.querySelector(".replyList");
-
-                // 날짜 처리를 위한 함수
-                function formatTime(str) {
-                    let date = new Date(str);
-                    console.log(date)
-                    return date.getFullYear() + '/' + (date.getMonth() + 1) + '/' + date.getDate() + ' ' + date.getHours() + ':' + date.getMinutes();
-                }
-                console.log("ajax 시작 ")
-                function loadJSONDate() {
-                    fetch('/replies/board/' + bno)
-                        .then(response => response.json())
-                        .then(data => {
-                            console.log(data);
-                            let str = '';
-                            replyCount.innerHTML = " ReplyCount " + data.length;
-
-                            data.forEach(function (reply, idx) {
-                                console.log(reply);
-                                str += '<div class="card-body" data-rno="' + reply.rno + '"><b>' + reply.rno + '</b>';
-                                str += '<h5 class="card-title">' + reply.text + '</h5>';
-                                str += '<h6 class="card-subtitle mb-2 text-muted">' + reply.replyer + '<h6>';
-                                str += '<p class="card-text">' + formatTime(reply.regDate) + '</p>';
-                                str += '</div>';
-                            });
-                            listGroup.innerHTML += str;  // 이 부분을 수정하여 이전 내용에 추가되도록 변경
-
-                        })
-                        .catch(error => console.error('Error:', error));
-                }
 
                 replyCount.addEventListener("click", function () {
                     //리스트 중복을 피하기 위한 초기화
@@ -121,6 +92,34 @@
                     loadJSONDate();
                 });
             });
+
+            // 날짜 처리를 위한 함수
+            function formatTime(str) {
+                let date = new Date(str);
+                console.log(date)
+                return date.getFullYear() + '/' + (date.getMonth() + 1) + '/' + date.getDate() + ' ' + date.getHours() + ':' + date.getMinutes();
+            }
+            function loadJSONDate() {
+                fetch('/replies/board/' + bno)
+                    .then(response => response.json())
+                    .then(data => {
+                        console.log(data);
+                        let str = '';
+                        replyCount.innerHTML = " ReplyCount " + data.length;
+
+                        data.forEach(function (reply, idx) {
+                            console.log(reply);
+                            str += '<div class="card-body" data-rno="' + reply.rno + '"><b>' + reply.rno + '</b>';
+                            str += '<h5 class="card-title">' + reply.text + '</h5>';
+                            str += '<h6 class="card-subtitle mb-2 text-muted">' + reply.replyer + '<h6>';
+                            str += '<p class="card-text">' + formatTime(reply.regDate) + '</p>';
+                            str += '</div>';
+                        });
+                        listGroup.innerHTML += str;  // 이 부분을 수정하여 이전 내용에 추가되도록 변경
+
+                    })
+                    .catch(error => console.error('Error:', error));
+            }
 
             const modal = document.querySelector(".modal");
             const addReply = document.querySelector(".addReply");
@@ -151,6 +150,40 @@
                 if (event.target === modal) {
                     modal.style.display = 'none';
                 }
+            });
+
+            // 댓글 객체 만들기
+            const replySave = document.querySelector(".replySave");
+            const replyText = document.querySelector("input[name = 'replyText']");
+            const replyer = document.querySelector("input[name = 'replyer']");
+            replySave.addEventListener("click",function (){
+                let reply = {
+                    bno : bno,
+                    text : replyText.value,
+                    replyer : replyer.value,
+                }
+
+                fetch("/replies/",{
+                    method : "POST",
+                    headers : {
+                        "Content-Type" : "application/json",
+                    },
+                    body : JSON.stringify(date),
+                })
+                    .then(response =>{
+                        if (!response.ok) {
+                            throw new Error("Error");
+                        }
+                        return response.json();
+                    })
+                    .then(result => {
+                        console.log(result);
+                        let newRno = parseInt(date);
+                        alert(newRno + "번 등록")
+                        modal.style.display = "none";
+                        loadJSONDate();
+                    })
+
             });
 
         </script>
