--- a/src/main/resources/templates/board/read.html
+++ b/src/main/resources/templates/board/read.html
@@ -9,7 +9,7 @@
 
         <div class="form-group">
             <label >Bno</label>
-            <input type="text" class="form-control" name="gno" th:value="${dto.bno}" readonly >
+            <input type="text" class="form-control" name="bno" th:value="${dto.bno}" readonly >
         </div>
 
         <div class="form-group">
@@ -219,6 +219,15 @@
                         loadJSONDate();
                     })
 
+            });
+            // 댓글 삭제기능
+            document.querySelector(".replyRemove").addEventListener("click",function (){
+               let rno = document.querySelector("input[name = 'rno']").value;
+                fetch("replies/" + rno, {
+                    method: "DELETE",
+                })
+                    .then((response) => response.json())
+                    .then((data) => console.log(data))
             });
 
         </script>
